--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
 install:
   # Build/test dependencies
-  - pip install -r requirements.txt
+  - pip install -r ./requirements.txt
   # Get fab to test fab
   - pip install -e .
 script:
