--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ python:
 install:
   # Build/test dependencies
   - pip install -r ./requirements.txt
-  # Get fab to test fab
-  - pip install -e .
 
-script: nosetests
+script:
+  - ./src/tests/run_tests.sh
