#10 #13 #16 #19 #20  ==  - add find query  - add find slash like query.  - cursor print [TODO] enhance to manage show count, resource etc...

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   # Build/test dependencies
   - pip install -r ./requirements.txt
-
+services:
+  - mongodb
 script:
   - ipython -c "import nose; nose.run()"
